# norm

./: .env.example  .gitignore  CLAUDE.md  Orbit_Marketing_MCP_Integration_Guide.md  README.md  docker-compose.yml  norm_brief.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: config.py  logging_config.py  main.py  system_config.py
apps/api/scripts/: seed.py  sync_delegation_tool.py  sync_for_period_config.py  sync_invoice_receiving_config.py  sync_read_only_flags.py  sync_roster_actions.py  sync_roster_component_apis.py  sync_roster_venue_scope.py  sync_roster_write_fix.py  sync_sales_for_period_config.py  sync_stock_item_minimums_action.py  sync_stock_requirements_config.py  sync_summary_fields.py  sync_workflow_mode_tools.py
apps/api/tests/: conftest.py  test_admin.py  test_admin_task_diagnostics.py  test_auth.py  test_automated_task_guidance.py  test_automated_tasks.py  test_bamboohr_connector.py  test_billing.py  test_business_calendar.py  test_config.py  test_config_validator.py  test_connector_oauth.py  test_connector_spec_routes.py  test_connectors.py  test_context_budget.py  test_context_builder.py  test_delegation.py  test_email_send_on_behalf.py  test_for_period_consolidator.py  test_function_executor_extensions.py  test_invoice_fixes_handler.py  test_invoice_review_consolidator.py  test_llm_interpreter.py  test_llm_retry.py  test_loadedhub_receive_live.py  test_logging_extras.py  test_mcp_app_tools.py  test_mcp_audit.py  (+39 more)
(+363 files in other folders)
