[project]
name = "norm-api"
version = "0.1.0"
description = "Norm - Hospitality AI Orchestration Platform API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",  # TODO: replace with psycopg2 in Dockerfile (needs libpq-dev)
    "alembic>=1.14.0",
    "anthropic>=0.39.0",
    "httpx>=0.27.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.6",
    "apscheduler>=3.10.0",
    "stripe>=9.0.0",
    "pydantic-settings>=2.13.1",
    "gunicorn>=22.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
